Rework media window header placement to show header title over titlebar without alltering content inner width overflow. Also, a few fixes related to the media window.

--- a/css/context.css
+++ b/css/context.css
@@ -2115,7 +2115,7 @@ svg._2Hphxk564S5yQHog-MFXfN * {
 
 ._1_VGcqhwscnT-kPnPb2c22 ._1wPm9-zsQlqLzb92eR77lC>svg {
   width: 16px !important;
-  height: 32px !important;
+  height: 16px !important;
 }
 
 /* RECORDING SAVE/SHARE */
