--- a/css/core.css
+++ b/css/core.css
@@ -3986,6 +3986,7 @@ body:not(.WindowFocus) #zehnToggleFriendsHeader .zehnIcon {
   background-color: transparent;
 }
 
+.zehnReveal._36CGU2t5Vavx0_9dwem6kb::before,
 .zehnReveal:disabled::before,
 .zehnReveal.Disabled::before,
 .zehnReveal._1f6yYACTilZQ2dmqGd5zXk::before {
@@ -4610,16 +4611,14 @@ body.zXrpABNQHpWKgSzqnGlL {
 .DesktopUI .title-area-icon,
 .friendsui-container .title-area-icon {
   background-color: var(--zehn-color-button-app-background) !important;
-}
 
-.DesktopUI .title-area-icon:hover,
-.friendsui-container .title-area-icon:hover {
-  background-color: var(--zehn-color-button-app-background-hover) !important;
-}
+  &:hover {
+    background-color: var(--zehn-color-button-app-background-hover) !important;
+  }
 
-.DesktopUI .title-area-icon:active,
-.friendsui-container .title-area-icon:active {
-  background-color: var(--zehn-color-button-app-background-active) !important;
+  &:active {
+    background-color: var(--zehn-color-button-app-background-active) !important;
+  }
 }
 
 .title-area-highlight {
