--- a/css/library.css
+++ b/css/library.css
@@ -3611,6 +3611,7 @@ body:not(.WindowFocus) ._32TmRVFkc8HMIUZ-KnnKby._3E5iVG630BkOHTaJJaMEMw::after {
   text-align: center !important;
 }
 
+/* GAME OR SOFTWARE */
 .WYgDg9NyCcMIVuMyZ_NBC {
   border: unset !important;
   /* display: flex !important; */
@@ -7245,10 +7246,8 @@ button.DialogButton._1qG6xUlNu-qvdhpSxwed5 {
   mask-position: center !important;
   mask-size: var(--zehn-size-icon-md) !important;
   -webkit-mask-image: var(--zehn-icon-dlc) !important;
-}
 
-._1rjqv6aCi9t7H-prIq99fk .gtlfC4VRhQqlmAmTFDl1N * {
-  display: none !important;
+  * { display: none !important; }
 }
 
 .ut0YcLYGAoSTz2Dnjw9U1 .R2VdUtWzknAHBOsdRzG_d {
@@ -7258,14 +7257,14 @@ button.DialogButton._1qG6xUlNu-qvdhpSxwed5 {
   margin-left: auto !important;
   inset: 0 !important;
   background-color: var(--zehn-color-button-app-background) !important;
-}
 
-.ut0YcLYGAoSTz2Dnjw9U1 .R2VdUtWzknAHBOsdRzG_d:hover {
-  background-color: var(--zehn-color-button-app-background-hover) !important;
-}
+  &:hover {
+    background-color: var(--zehn-color-button-app-background-hover) !important;
+  }
 
-.ut0YcLYGAoSTz2Dnjw9U1 .R2VdUtWzknAHBOsdRzG_d:active {
-  background-color: var(--zehn-color-button-app-background-active) !important;
+  &:active {
+    background-color: var(--zehn-color-button-app-background-active) !important;
+  }
 }
 
 .ut0YcLYGAoSTz2Dnjw9U1 .R2VdUtWzknAHBOsdRzG_d svg {
@@ -7274,10 +7273,8 @@ button.DialogButton._1qG6xUlNu-qvdhpSxwed5 {
   mask-position: center !important;
   mask-size: var(--zehn-size-icon-md) !important;
   -webkit-mask-image: var(--zehn-icon-window-close) !important;
-}
 
-.ut0YcLYGAoSTz2Dnjw9U1 .R2VdUtWzknAHBOsdRzG_d svg * {
-  display: none !important;
+  * { display: none !important; }
 }
 
 /* DEMO */
