--- a/css/tooltip.css
+++ b/css/tooltip.css
@@ -109,7 +109,7 @@
 
 /* SCREENSHOT ADD MARKER */
 ._3jHmRggQqzWvB1s6lKwCOG>.tool-tip-source:first-child {
-  position: absolute !important;
+  /* position: absolute !important; */
   z-index: 100 !important;
   top: 0 !important;
 }
